fix bug where map zoom controls were cut off depending on window size

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   min-width: 20rem;
-  max-width: 25vw;
+  max-width: 20vw;
   padding: 2rem 0;
   height: 92vh;
 
@@ -44,8 +44,6 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  // margin: 0.5rem 0.5rem;
-  // padding: 0 2rem;
   width: 100%;
   height: 90vh;
 }
